--- a/idex.html
+++ b/idex.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="styles/style.css" />
+   <!--<link rel="stylesheet" href="styles/style.css" /> -->
     <title>Shredding Braw</title>
+
+    <link rel ="stylesheet" href="CSS.css">
   </head>
   <body>
     <div class="game-intro">
@@ -19,5 +21,6 @@
     </div>
 
     <script src="index.js"></script>
-  </body>
+  </body>s
 </html>
+
