--- a/idex.html
+++ b/idex.html
@@ -35,7 +35,7 @@
             <br> 
             Don't let energy balls nor enemies touch you. You will die.
           </P>
-          <img class="modal-img" src="./images/rules.png" alr="character rules">
+          <img class="modal-img" src="./Images/rules.png" alr="character rules">
         </section>
         <section class="modal hidden">
           <button class="close-modal">x</button>
@@ -49,7 +49,7 @@
             <br>
             Hover over dragon balls with your character to colletc them 
           </P>
-          <img class = modal-img src="./images/keyboard.png" alt="img of keyboard">
+          <img class = modal-img src="./Images/keyboard.png" alt="img of keyboard">
         </section>
         <section class = "modal hidden">
           <button class = "close-modal">x</button>
@@ -67,7 +67,7 @@
             <br>
             Elon Musk - <i>I'll be playing this game in Mars</i>
           </P>
-          <img class = modal-img src="./images/magazine.png" alt="nintendo magazine img">
+          <img class = modal-img src="./Images/magazine.png" alt="nintendo magazine img">
         </section>
         <section class = "modal hidden">
           <button class = "close-modal">x</button>
@@ -82,7 +82,7 @@
           <br>
           <p>Thats what she said</p>
           <div class="modal-img-flex"></div>
-          <img class="modal-img-sneaky" src="./images/sneaky4.png" alt="game screenshot 4">
+          <img class="modal-img-sneaky" src="./Images/sneaky4.png" alt="game screenshot 4">
           </div>
         </section>
         <h1>
@@ -91,10 +91,10 @@
         <br>
         <br>
         <section class="flexWorlds">
-          <img class = "modal-img selected" src="./images/panoramic5.jpeg" alt="WORLD1">
-          <img class = "modal-img" src="./images/panoramic2.jpeg" alt="WORLD 2">
-          <img class = "modal-img" src="./images/panoramic3.png" alt="WORLD 3">
-          <img class = "modal-img" src="./images/panoramic4.png" alt="WORLD 4">
+          <img class = "modal-img selected" src="./Images/panoramic5.jpeg" alt="WORLD1">
+          <img class = "modal-img" src="./Images/panoramic2.jpeg" alt="WORLD 2">
+          <img class = "modal-img" src="./Images/panoramic3.png" alt="WORLD 3">
+          <img class = "modal-img" src="./Images/panoramic4.png" alt="WORLD 4">
         </section>
       </div>
       <div class="overlay hidden"></div>
