--- a/idex.html
+++ b/idex.html
@@ -110,7 +110,7 @@
         <canvas class="hidden" id="canvas"></canvas>
       </div>
     </footer>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
 
