--- a/idex.html
+++ b/idex.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
    <!--<link rel="stylesheet" href="styles/style.css" /> -->
-    <title>World Fighter 2.0</title>
+    <title>World Fighter 2.</title>
 
     <link rel ="stylesheet" href="CSS.css">
   </head>
@@ -15,7 +15,7 @@
       <br>
       <br>
       <h1>WORLD FIGHTER <span>2.0</span></h1>
-      <p><span>MADE BY NINTENDO </span><span id = "country">JAPAN</span> - BEST SELLER 2022</p>
+      <p><span>MADE BY MATIAS</span><span id = "country">MOLINA</span> - 2022</p>
     </header>
     <main>
       <div>
@@ -35,7 +35,7 @@
             <br> 
             Don't let energy balls nor enemies touch you. You will die.
           </P>
-          <img class="modal-img" src="./Images/rules.png" alr="character rules">
+          <img class="modal-img" src="./Images/rules.png" alt="character rules">
         </section>
         <section class="modal hidden">
           <button class="close-modal">x</button>
