small change test

--- a/idex.html
+++ b/idex.html
@@ -15,7 +15,7 @@
       <br>
       <br>
       <h1>WORLD FIGHTER <span>2.0</span></h1>
-      <p><span>MADE BY NINTENDO </span><span id = "country">JAPAN</span> - BEST SELLER 2022</p>
+      <p><span>MADE BY MATIAS MOLINA</span><span id = "country">MOLINA</span> - 2022</p>
     </header>
     <main>
       <div>
