--- a/idex.html
+++ b/idex.html
@@ -15,7 +15,7 @@
       <br>
       <br>
       <h1>WORLD FIGHTER <span>2.0</span></h1>
-      <p><span>MADE BY MATIAS MOLINA</span><span id = "country">BISHOP</span> - 2022</p>
+      <p><span>MADE BY MATIAS MOLINA </span><span id = "country">BISHOP</span> - 2022</p>
     </header>
     <main>
       <div>
@@ -57,7 +57,7 @@
              REVIEWS. OVER 100K & COUNTNG
           </h1>
           <P>
-            Ashton Kutcher - <i>"OMG hadnt been this hooked on a game since Zelda came out"</i>
+            Ashton Kutcher - <i>"OMG I hadn't been this hooked on a game since Zelda came out"</i>
             <br>
             Donald Trump - <i>"Simply amazing"</i>
             <br>
@@ -75,10 +75,7 @@
              SNEACKY PREVIEW / ADVANCE
           </h1>
           <br>
-          <br>
-          <p>You can choose different worlds</p>
-          <br>
-          <p>If you can last longer than a minute you'll get a round with the baddest</p>
+          <p>You can choose among 4 different worlds to play</p>
           <br>
           <p>Thats what she said</p>
           <div class="modal-img-flex"></div>
