--- a/idex.html
+++ b/idex.html
@@ -67,7 +67,7 @@
             <br>
             Elon Musk - <i>I'll be playing this game in Mars</i>
           </P>
-          <img class = modal-img src="./Images/magazine.png" alt="nintendo magazine img">
+          <img class = modal-imgMario src="./Images/magazine.png" alt="nintendo magazine img">
         </section>
         <section class = "modal hidden">
           <button class = "close-modal">x</button>
